nuovo metodo
creazione metodo java per vedere le note di uno specifico utente

implementazione in angular

ancora bug del giorno in avanti